<!--

    Copyright (c) 2011-2014 Sonatype, Inc. All rights reserved.
    Includes the third-party code listed at http://links.sonatype.com/products/clm/attributions.
    "Sonatype" is a trademark of Sonatype, Inc.

-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>com.sonatype.insight.brain</groupId>
    <artifactId>insight-brain</artifactId>
    <version>1.9.1-SNAPSHOT</version>
  </parent>

  <artifactId>insight-brain-client</artifactId>
  <name>Insight Brain Client</name>

  <properties>
    <maven.compiler.source>1.6</maven.compiler.source>
    <maven.compiler.target>1.6</maven.compiler.target>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
    </dependency>

    <dependency>
      <groupId>com.sonatype.insight.brain</groupId>
      <artifactId>insight-brain-db</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.sonatype.insight.scan</groupId>
      <artifactId>insight-client-utils</artifactId>
    </dependency>
    <dependency>
      <groupId>com.sonatype.insight.brain</groupId>
      <artifactId>insight-json-store</artifactId>
    </dependency>
    <dependency>
      <groupId>com.sonatype.clm</groupId>
      <artifactId>com.sonatype.clm.dto.model</artifactId>
    </dependency>

    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>ch.qos.logback</groupId>
      <artifactId>logback-classic</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.sonatype.insight.brain</groupId>
      <artifactId>insight-brain-data</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.sonatype.insight.brain</groupId>
      <artifactId>insight-brain-data</artifactId>
      <type>test-jar</type>
    </dependency>
    <dependency>
      <groupId>com.sonatype.insight.brain</groupId>
      <artifactId>insight-brain-service</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.sonatype.insight.brain</groupId>
      <artifactId>insight-brain-service</artifactId>
      <classifier>tests</classifier>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.sonatype.insight.scan</groupId>
      <artifactId>insight-mock-server</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.sonatype.insight.portal</groupId>
      <artifactId>insight-test</artifactId>
      <scope>test</scope>
      <exclusions>
        <exclusion>
          <groupId>org.eclipse.jetty</groupId>
          <artifactId>jetty-webapp</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>com.yammer.dropwizard</groupId>
      <artifactId>dropwizard-testing</artifactId>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <argLine>-XX:MaxPermSize=128m</argLine>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
